--- a/app/src/main/res/layout/fragmet_login.xml
+++ b/app/src/main/res/layout/fragmet_login.xml
@@ -33,38 +33,50 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/logo_text_view" />
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/username_edit_text"
-            android:layout_width="0dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="64dp"
-            android:layout_marginVertical="16dp"
+            android:layout_marginVertical="32dp"
             android:hint="Usuário"
-            android:padding="16dp"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/login_text_view" />
+            app:layout_constraintTop_toBottomOf="@id/login_text_view">
 
-        <EditText
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/password_edit_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="16dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_marginVertical="32dp"
             android:hint="Senha"
             android:layout_marginHorizontal="64dp"
             android:inputType="textPassword"
-            android:padding="16dp"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/username_edit_text" />
+            app:layout_constraintTop_toBottomOf="@id/username_edit_text">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/login_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="16dp"
+            android:layout_marginVertical="32dp"
             android:text="Entrar"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
