--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="gray">#808080</color>
+    <color name="blue_black">#0c1319</color>
     <color name="blue">#08395c</color>
+    <color name="light_blue">#88cbf3</color>
 </resources>
