--- a/app/src/main/res/layout/fragment_esqueci_senha.xml
+++ b/app/src/main/res/layout/fragment_esqueci_senha.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/blue_black">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -28,6 +29,7 @@
             android:layout_marginTop="8dp"
             android:text="Esqueci Senha"
             android:textSize="20sp"
+            android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:textColor="@color/white"
             android:text="Enviaremos um email para o resete de senha"
             app:layout_constraintEnd_toEndOf="@id/esqueciSenha_text_view"
             app:layout_constraintStart_toStartOf="@+id/esqueciSenha_text_view"
@@ -51,6 +54,7 @@
             android:layout_marginHorizontal="64dp"
             android:layout_marginVertical="16dp"
             android:hint="Email"
+
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
